--- a/src/Components/TaskList.css
+++ b/src/Components/TaskList.css
@@ -9,3 +9,14 @@
     transform: rotate(360deg);
   }
 }
+.loader > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 20px;
+  width: 300px;
+  height: 30px;
+  margin: 20px;
+}
