--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+body {
+  background: #4ecdc4; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #a0cbfb,
+    #4ecdc4
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #a0cbfb,
+    #4ecdc4
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.input {
+  border-radius: 20px;
+  outline: none;
+}
 .App {
   display: flex;
   width: 100vw;
