--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
     #a0cbfb,
     #4ecdc4
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 .input {
   border-radius: 20px;
